--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ textarea {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  padding: 5px 5px 0 20PX;
 }
 
 .past {
@@ -67,5 +68,7 @@ textarea {
 
 .saveBtn i:hover {
   font-size: 20px;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  color: black;
 }
+
